[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/menu/core/panel/GameSubMenuPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/font_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/ui/menu/core/form/item/UIMenuFormSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/core/form/item/UIMenuFormSelect.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/menu/menus/panels/SettingsVideo.gd" type="Script" id=5]

[node name="SettingsVideo" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Game" type="VBoxContainer" parent="." index="0"]
margin_right = 1024.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="Game" index="0"]
margin_right = 1024.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "game_settings"
valign = 1

[node name="Items" type="VBoxContainer" parent="Game" index="1"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Language" parent="Game/Items" index="0" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 1024.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
input_name = "language"
values = [ "fr", "en" ]

[node name="Crosshair" parent="Game/Items" index="1" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 48 )
input_name = "crosshair"

[node name="Video" type="VBoxContainer" parent="." index="1"]
margin_top = 164.0
margin_right = 1024.0
margin_bottom = 442.0

[node name="Label" type="Label" parent="Video" index="0"]
margin_right = 1024.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "screen_settings"
valign = 1

[node name="Items" type="VBoxContainer" parent="Video" index="1"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 278.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Fullscreen" parent="Video/Items" index="0" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 1024.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
input_name = "fullscreen"

[node name="Ratio" parent="Video/Items" index="1" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 48 )
input_name = "screen_ratio"
values = [ "1:1", "3:2", "4:3", "16:9", "21:9" ]
current_selection = 2

[node name="Resolutions" parent="Video/Items" index="2" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 48 )
input_name = "screen_resolution"

[node name="FoV" parent="Video/Items" index="3" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
input_name = "fov"
allow_half_value = true

[node name="Vsync" parent="Video/Items" index="4" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 192.0
margin_right = 1024.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 48 )
input_name = "vsync"

[connection signal="value_changed" from="Game/Items/Language" to="." method="_on_Language_value_changed"]
[connection signal="value_changed" from="Game/Items/Crosshair" to="." method="_on_Crosshair_value_changed"]
[connection signal="value_changed" from="Video/Items/Fullscreen" to="." method="_on_Fullscreen_value_changed"]
[connection signal="value_changed" from="Video/Items/Ratio" to="." method="_on_Ratio_value_changed"]
[connection signal="value_changed" from="Video/Items/Resolutions" to="." method="_on_Resolutions_value_changed"]
[connection signal="value_changed" from="Video/Items/FoV" to="." method="_on_FoV_value_changed"]
[connection signal="value_changed" from="Video/Items/Vsync" to="." method="_on_Vsync_value_changed"]
